# pa-grupo5

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: static.yaml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/images/: index.rst
docs/source/parser/: index.rst
docs/source/processor/: processor.rst
docs/source/utils/: logger.rst  path.rst
src/: main.py
src/images/: images.py
src/logs/: _logger
src/parser/: parser.py
src/processor/: processor.py
src/utils/: errors.py  logger.py  path.py  static_checker.py
