[metadata]
name = TPO_GRUPO5
version = 0.1.0
description = Proyecto del GRUPO 5 para Programacion Aplicada.
long_description = file: README.md
long_description_content_type = text/markdown
author = Arias Sofia, Leal Jesus, Paracare Jesus, Benjumea Abraham, Perez Leobaldo
author_email = jesusalbertolv@gmail.com
url = https://github.com/imjesusleal/pa-grupo5
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pre_commit>=4.0.1
python_requires = >=3.7
include_package_data = True

[options.extras_require]
dev =
    flake8>=6.0.0
    black>=22.0
    isort>=5.12.0

[options.entry_points]
console_scripts =
    tpo=src.main:main
